<resources>
    <string name="app_name">SPENDING TRACKER</string>
    <string name="action_settings">Settings</string>
    <string name="MainTheme">Easily keep track of your expenses</string>
    <string name="MainInstruction">Start by pressing the SetUp button below</string>
    <string name="SetUpButton">SetUp</string>
    <string name="AddExpenseButton">Add Expense</string>
    <string name="TrackingButton">Tracking</string>
    <string name="UserProfileButton">User Profile</string>

    //START SCREEN

    <string name="MainInstruction1">You can still change your income
        and categories in Setup!</string>
    <string name="MainInstruction2">You need to set up your income
        and categories in Setup before adding any expenses!</string>

    //SETUP SCREEN
    <string name="SUTitle">Setup</string>

    <string name="SUCheckRent">Rent/Mortgage</string>
    <string name="SUCheckFood">Food/Grocery</string>
    <string name="SUCheckEnt">Entertainment</string>
    <string name="SUCheckLoans">Loans</string>
    <string name="SUCheckSavings">Savings</string>
    <string name="SUCheckCredit">Credit Card</string>
    <string name="SUCheckFuel">Fuel</string>
    <string name="SUCheckManual">Manual Category</string>

    <string name="SUCategory">Select the categories you want to track: </string>

    <string name="SUSubmit">Submit</string>

    <string name="SUUpdate">Your income is currently: $</string>
    <string name="SUUExtraUpdate">Categories added/removed successfully! Press
        back to add and track expenses.</string>

    <string name="SUWarning">Please enter an income!</string>
    <string name="SUWarning1">Please enter a decimal number without special
        characters.</string>

    <string name="ActiveCategoriesList">You currently have no active
        categories.</string>
    <string name="ActiveCategoriesList1">Your active categories: </string>

    <string name="SUMonthly">Enter your Monthly Income in decimal format
                     without \'$\' or other special characters.</string>
    <string name="SUMonthlyBlank"> </string>

    //ADD EXPENSE SCREEN
    <string name="AETitle">Add Expense</string>
    <string name="AESelectCat">Select a category: </string>

    <string-array name="cats_array">
        <item>Rent/Mortgage</item>
        <item>Food/Grocery</item>
        <item>Entertainment</item>
        <item>Loans</item>
        <item>Savings</item>
        <item>Credit</item>
        <item>Fuel</item>
        <item>Manual</item>
    </string-array>

    <string name="AEAmountL">Enter the amount in decimal format without
        \'$\' or other special characters.</string>
    <string name="AESubmit">Submit</string>

    <string name="AEWarning"> </string>
    <string name="AEWarning1">Please enter an amount!</string>
    <string name="AEWarning2">Enter a decimal number without special
        characters.</string>
    <string name="AEWarning3">You have exceeded your income of $</string>

    <string name="AEUpdate"> </string>
    <string name="AEUpdate1">Please select a category to add to.</string>
    <string name="AEUpdateRent">Amount added to Rent/Mortgage: $</string>
    <string name="AEUpdateFood">Amount added to Food/Grocery: $</string>
    <string name="AEUpdateEnt">Amount added to Entertainment: $</string>
    <string name="AEUpdateLoans">Amount added to Loans: $</string>
    <string name="AEUpdateSavings">Amount added to Savings: $</string>
    <string name="AEUpdateCredit">Amount added to Credit: $</string>
    <string name="AEUpdateFuel">Amount added to Fuel: $</string>
    <string name="AEUpdateManual">Amount added to  $</string>


    <string name="AEInfo">Add another expense or press back and press
        Tracking to view the tracking charts.</string>

    <string name="AEUATB">BLANK</string>
    <string name="AEUATRent">RENT</string>
    <string name="AEUATFood">FOOD</string>
    <string name="AEUATEntertain">ENTERTAIN</string>
    <string name="AEUATLoans">LOANS</string>
    <string name="AEUATSavings">SAVINGS</string>
    <string name="AEUATCredit">CREDIT</string>
    <string name="AEUATFuel">FUEL</string>
    <string name="AEUATManual">MANUAL</string>

    //TRACKING SCREEN
    <string name="TRTitle">Tracking</string>
    <string name="TRPieButton">Pie Chart View</string>
    <string name="TRExVIButton">Expense Vs. Income View</string>
    <string name="TRListButton">List View</string>

    <string name="TRBlank">Press a button above to view its chart.</string>

    <string name="TRExVI"> </string>
    <string name="TRExVI1">You have currently spent \'\'% of your income of $</string>

    <string name="TRPieData"> </string>
    <string name="TDPCRent">Rent/Mortgage = </string>
    <string name="TDPCFood">Food/Grocery = </string>
    <string name="TDPCEnt">Entertainment = </string>
    <string name="TDPCLoans">Loans = </string>
    <string name="TDPCSavings">Savings = </string>
    <string name="TDPCCredit">Credit Card = </string>
    <string name="TDPCFuel">Fuel = </string>
    <string name="TDPCManual">Manual Category = </string>


    <string name="TRList"> </string>
    <string name="TDLRent">Rent/Mortgage $</string>
    <string name="TDLFood">Food/Grocery $</string>
    <string name="TDLEnt">Entertainment $</string>
    <string name="TDLLoans">Loans $</string>
    <string name="TDLSavings">Savings $</string>
    <string name="TDLCredit">Credit Card $</string>
    <string name="TDLFuel">Fuel $</string>
    <string name="TDLManual">Manual Category $</string>
    <string name="TDLLine">-------------------------------------------</string>
    <string name="TDLExpenses">Total expenses: $</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <string name="title_activity_tracking">TrackingActivity</string>
    <string name="title_activity_setup">SetupActivity</string>

</resources>