<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:measureAllChildren="false"
    android:paddingTop="@dimen/abc_action_bar_stacked_max_height">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csci325.csu.spendingtracker.SetupActivity"
    tools:showIn="@layout/activity_setup"
    android:background="#cad5e6">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUMonthly"
        android:id="@+id/textView"
        android:textAlignment="viewStart"
        android:singleLine="false"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#6084b1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCategory"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="41dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckRent"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckFood"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckEnt"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckLoans"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckSavings"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/checkBox4"
        android:layout_alignStart="@+id/checkBox4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckCredit"
        android:id="@+id/checkBox6"
        android:layout_below="@+id/checkBox5"
        android:layout_alignStart="@+id/checkBox5" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckFuel"
        android:id="@+id/checkBox7"
        android:layout_below="@+id/checkBox6"
        android:layout_alignStart="@+id/checkBox6" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUCheckManual"
        android:id="@+id/checkBox8"
        android:layout_below="@+id/checkBox7"
        android:layout_alignStart="@+id/checkBox7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
        android:maxLines="1"
        android:width="100dp"
        android:backgroundTint="#6084b1"
        android:layout_below="@+id/checkBox8"
        android:layout_alignEnd="@+id/checkBox8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUSubmit"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUUpdate"
        android:id="@+id/textView3"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUUExtraUpdate"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />


</RelativeLayout>
    </ScrollView>