<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csci325.csu.spendingtracker.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#cad5e6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MainTheme"
        android:id="@+id/Greeting"
        android:layout_marginTop="103dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#020204" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MainInstruction"
        android:id="@+id/Instructions"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#f20d0d" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Instructions">
        <Button
            android:layout_width="109dp"
            android:layout_height="85dp"
            android:text="@string/SetUpButton"
            android:id="@+id/SetupButton"
            android:layout_marginBottom="70dp"
            android:layout_row="35"
            android:layout_column="0"
            android:gravity="fill_vertical"
            android:textAlignment="center"
            android:onClick="openSetup" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/AddExpenseButton"
            android:id="@+id/AddEx"
            android:layout_row="35"
            android:layout_column="3"
            android:gravity="fill_vertical"
            android:textAlignment="center"
            android:onClick="openAddExpense" />

        <Button
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:text="@string/TrackingButton"
            android:id="@+id/Tracking"
            android:layout_row="35"
            android:layout_column="4"
            android:gravity="fill_vertical"
            android:textAlignment="center"
            android:onClick="openTracking" />
    </GridLayout>
</RelativeLayout>
