<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csci325.csu.spendingtracker.TrackingActivity"
    tools:showIn="@layout/activity_tracking">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentStart="true"
        android:baselineAligned="false"
        android:id="@+id/tableRow">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:text="@string/TRPieButton"
            android:id="@+id/button2" />

        <Button
            android:layout_width="128dp"
            android:layout_height="76dp"
            android:text="@string/TRExVIButton"
            android:id="@+id/button3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:text="@string/TRListButton"
            android:id="@+id/button4"
            android:layout_gravity="top" />

    </TableRow>

</RelativeLayout>
